# map_to_sdf

./: CMakeLists.txt  README.md  package.xml
launch/: gazebo.launch  map_to_sdf.launch
models/robocup/: model.config  model.sdf
models/robocup/meshes/: robocup.dae
scripts/: create_mesh.py  create_sdf_model.py  map_to_sdf
