<?xml version="1.0"?>
<package format="2">
  <name>map_to_sdf</name>
  <version>0.0.0</version>
  <description>The map_to_sdf package</description>

  <maintainer email="wty.andrew@gmail.com">Andrew</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
</package>
